fixed header z-index

--- a/src/components/Navigation/navigation.css
+++ b/src/components/Navigation/navigation.css
@@ -10,6 +10,7 @@ header {
   margin: 0;
   padding: 0.5rem;
   display: inline-flex;
+  z-index: 200;
 }
 
 header .menu-btn {
